--- a/contacto.html
+++ b/contacto.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Formulario de contacto de Logística Los Hermanos">
+    <meta name="keywords" content="contacto, bienes raíces, logística">
+
     <title>Bienes Raices</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
 
     <header class="site-header">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <h1>Logistica LOS HERMANOS</h1>
+                <h1>Logistica <span class="colorTitu">LOS HERMANOS</span></h1>
 
                 <div class="mobile-menu">
                     <a href="#navegacion">
@@ -30,8 +35,8 @@
         </div> <!-- contenedor -->
     </header>
 
-    <h1 class="fw-300 centrar-texto">Contacto</h1>
-    <img src="img/destacada3.jpg" alt="Imagen Principal">
+    <h1 class="fw-300 centrar-texto negrita">Contacto</h1>
+
 
     <main class="contenedor seccion contenido-centrado">
         <h2 class="fw-300 centrar-texto">Llena el formulario de Contacto</h2>
@@ -49,46 +54,10 @@
                 <input type="tel" id="telefono" placeholder="Tu Teléfono" required>
 
                 <label for="mensaje">Mensaje: </label>
-                <textarea  id="mensaje"></textarea>
+                <textarea id="mensaje"></textarea>
 
             </fieldset>
-                
 
-            <fieldset>
-                <legend>Información sobre Propiedad</legend>
-                <label for="opciones">Vende o Compra</label>
-                <select id="opciones">
-                    <option value="" disabled selected>-- Seleccione --</option>
-                    <option value="Compra">Compra</option>
-                    <option value="Vende">Vende</option>
-                </select>
-
-                <label for="cantidad">Cantidad:</label>
-                <input type="number" min="0" max="100" step="5">
-            </fieldset>
-
-            <fieldset>
-                <legend>Contacto</legend>
-
-                <p>Como desea ser Contactado:</p>
-
-                <div class="forma-contacto">
-                    <label for="telefono">Teléfono</label>
-                    <input type="radio" name="contacto" value="telefono" id="telefono">
-
-                    <label for="correo">E-mail</label>
-                    <input type="radio" name="contacto" value="correo" id="correo">
-                </div>
-
-                <p>Si eligió Teléfono, elija la fecha y la hora</p>
-                <label for="fecha">Fecha:</label>
-                <input type="date" id="fecha">
-
-                <label for="hora">Hora:</label>
-                <input type="time" id="hora" min="09:00" max="18:00">
-
-     
-            </fieldset>
 
             <input type="submit" value="Enviar" class="boton boton-verde">
 
@@ -104,5 +73,11 @@
             <p class="copyright">Todos los Derechos Reservados 2019 &copy; </p>
         </div>
     </footer>
+
+
+
+
+    <script src="form.js"></script>
 </body>
+
 </html>
