--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,13 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
 
     <header class="site-header inicio">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <h1>Logistica LOS HERMANOS</h1>
+                <h1>Logistica <span class="colorTitu">LOS HERMANOS</span></h1>
 
                 <div class="mobile-menu">
                     <a href="#navegacion">
@@ -23,7 +25,7 @@
                 </div>
 
                 <nav id="navegacion" class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>                  
+                    <a href="nosotros.html">Nosotros</a>
                     <a href="contacto.html">Contacto</a>
                 </nav>
             </div>
@@ -31,116 +33,57 @@
         </div> <!-- contenedor -->
     </header>
 
+    <!-- api whatsapp -->
+    <div class="whatsapp-button">
+        <a href="https://api.whatsapp.com/send?phone=2966623913&text=Hola, quisiera más asesoramiento" target="_blank">
+            <img src="/whatsapp.svg" alt="WhatsApp">
+        </a>
+    </div>
+   
+    
+
+
     <section class="contenedor seccion">
-        <h2 class="fw-300 centrar-texto">Más Sobre Nosotros</h2>
+        <h2 class="fw-300 centrar-texto negrita">Por Que Elegirnos</h2>
 
         <div class="iconos-nosotros">
-            <div class="icono">
+
+            <div class="icono gradient">
                 <img src="img/icono1.svg" alt="Icono Seguridad">
                 <h3>Seguridad</h3>
-                <p>Quasi quibusdam, quos deserunt, recusandae iusto dolorem voluptatibus quaerat veritatis consectetur culpa sit dignissimos maiores iure id, magnam non voluptatum molestiae doloremque.</p>
+                <ul>
+                    <li>Garantizamos la protección de tus bienes durante el traslado.</li>
+                    <li>Utilizamos materiales de embalaje de alta calidad.</li>
+                    <li>Contamos con personal capacitado para manejar tus pertenencias.</li>
+
+                </ul>
             </div>
 
-            <div class="icono">
+            <div class="icono gradient">
                 <img src="img/icono2.svg" alt="Icono Mejor Precio">
                 <h3>El Mejor Precio</h3>
-                <p>Quasi quibusdam, quos deserunt, recusandae iusto dolorem voluptatibus quaerat veritatis consectetur culpa sit dignissimos maiores iure id, magnam non voluptatum molestiae doloremque.</p>
+                <ul>
+                    <li>Ofrecemos tarifas competitivas sin comprometer la calidad.</li>
+                    <li>Diseñamos presupuestos personalizados para cada cliente.</li>
+                    <li>Optimizamos recursos para reducir costos innecesarios.</li>
+
+                </ul>
             </div>
 
-            <div class="icono">
+            <div class="icono gradient">
                 <img src="img/icono3.svg" alt="Icono a Tiempo">
                 <h3>A Tiempo</h3>
-                <p>Quasi quibusdam, quos deserunt, recusandae iusto dolorem voluptatibus quaerat veritatis consectetur culpa sit dignissimos maiores iure id, magnam non voluptatum molestiae doloremque.</p>
+                <ul>
+                    <li>Cumplimos con los tiempos acordados en cada servicio.</li>
+                    <li>Seguimos rutas optimizadas para garantizar eficiencia.</li>
+                    <li>Supervisamos cada etapa para asegurar entregas precisas.</li>
+
+                </ul>
             </div>
         </div>
     </section>
 
-    <main class="seccion contenedor">
-        <h2 class="fw-300 centrar-texto">Casas y Depas en Venta</h2>
 
-        <div class="contenedor-anuncios">
-            <div class="anuncio">
-                <img src="img/anuncio1.jpg" alt="Anuncio casa en el lago">
-                <div class="contenido-anuncio">
-                    <h3>Casa de Lujo en el Lago</h3>
-                    <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-                    <p class="precio">$3,000,0000</p>
-
-                    <ul class="iconos-caracteristicas">
-                        <li>
-                            <img src="img/icono_wc.svg" alt="icono wc">
-                            <p>3</p>
-                        </li>
-                        <li>
-                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
-                            <p>3</p>
-                        </li>
-                        <li>
-                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
-                            <p>4</p>
-                        </li>
-                    </ul>
-
-
-                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
-                </div>
-            </div>
-
-            <div class="anuncio">
-                <img src="img/anuncio2.jpg" alt="Anuncio casa de lujo">
-                <div class="contenido-anuncio">
-                    <h3>Casa terminados de lujo</h3>
-                    <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
-                    <p class="precio">$2,000,0000</p>
-                    <ul class="iconos-caracteristicas">
-                        <li>
-                            <img src="img/icono_wc.svg" alt="icono wc">
-                            <p>3</p>
-                        </li>
-                        <li>
-                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
-                            <p>3</p>
-                        </li>
-                        <li>
-                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
-                            <p>4</p>
-                        </li>
-                    </ul>
-
-                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
-                </div>
-            </div>
-
-            <div class="anuncio">
-                <img src="img/anuncio3.jpg" alt="Anuncio casa con alberca">
-                <div class="contenido-anuncio">
-                    <h3>Casa con alberca</h3>
-                    <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
-                    <p class="precio">$3,000,0000</p>
-                    <ul class="iconos-caracteristicas">
-                        <li>
-                            <img src="img/icono_wc.svg" alt="icono wc">
-                            <p>3</p>
-                        </li>
-                        <li>
-                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
-                            <p>3</p>
-                        </li>
-                        <li>
-                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
-                            <p>4</p>
-                        </li>
-                    </ul>
-
-                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="ver-todas">
-            <a href="anuncios.html" class="boton boton-verde">Ver Todas</a>
-        </div>
-    </main>
 
     <section class="imagen-contacto">
         <div class="contenedor contenido-contacto">
@@ -150,7 +93,7 @@
         </div>
     </section>
 
-   
+
 
     <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
@@ -162,4 +105,5 @@
         </div>
     </footer>
 </body>
+
 </html>
