--- a/nosotros.html
+++ b/nosotros.html
@@ -18,7 +18,7 @@
     <header class="site-header">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <h1>Logistica - LOS HERMANOS -</h1>
+                <h1>Logistica <span class="colorTitu">LOS HERMANOS</span></h1>
 
                 <div class="mobile-menu">
                     <a href="#navegacion">
@@ -34,28 +34,36 @@
         </div> <!-- contenedor -->
     </header>
 
+    <!-- api whatsapp -->
+    <div class="whatsapp-button">
+        <a href="https://api.whatsapp.com/send?phone=2966623913&text=Hola, quisiera más asesoramiento" target="_blank">
+            <img src="/whatsapp.svg" alt="WhatsApp">
+        </a>
+    </div>
+
     <main class="contenedor">
-        <h1 class="fw-300 centrar-texto">Conoce Sobre Nosotros</h1>
+        <h1 class="fw-300 centrar-texto negrita">Conoce Sobre Nosotros</h1>
 
         <div class="contenido-nosotros">
             <div class="imagen">
-                <img src="img/nosotros.jpg" alt="Imagen Sobre Nosotros">
+                <img src="img/CAMION3.jpg" alt="Imagen Sobre Nosotros">
             </div>
             <div class="texto-nosotros">
-                <blockquote>25 Años de Experiencia</blockquote>
+                <blockquote>Mas de 10 Años de Experiencia</blockquote>
 
-                <p>Proin consequat viverra sapien, malesuada tempor tortor feugiat vitae. In dictum felis et nunc
-                    aliquet molestie. Proin tristique commodo felis, sed auctor elit auctor pulvinar. Nunc porta, nibh
-                    quis convallis sollicitudin, arcu nisl semper mi, vitae sagittis lorem dolor non risus. Vivamus
-                    accumsan maximus est, eu mollis mi. Proin id nisl vel odio semper hendrerit. Nunc porta in justo
-                    finibus tempor. Suspendisse lobortis dolor quis elit suscipit molestie. Sed condimentum, erat at
-                    tempor finibus, urna nisi fermentum est, a dignissim nisi libero vel est. Donec et imperdiet augue.
-                    Curabitur malesuada sodales congue. Suspendisse potenti. Ut sit amet convallis nisi.</p>
+                <p>En LOGISTICA LOS HERMANOS, nos dedicamos a brindar soluciones de logística, fletes
+                    y mudanzas con más de 10 años de experiencia en el sector. A lo largo de los años,
+                    hemos trabajado incansablemente para ofrecer un servicio de alta calidad,
+                    respaldado por nuestro compromiso con la puntualidad, la seguridad y la satisfacción
+                    de nuestros clientes.</p>
 
-                <p>Aliquam lectus magna, luctus vel gravida nec, iaculis ut augue. Praesent ac enim lorem. Quisque ac
-                    dignissim sem, non condimentum orci. Morbi a iaculis neque, ac euismod felis. Fusce augue quam,
-                    fermentum sed turpis nec, hendrerit dapibus ante. Cras mattis laoreet nibh, quis tincidunt odio
-                    fermentum vel. Nulla facilisi.</p>
+                <p>Nuestra misión es hacer que cada mudanza y cada servicio de transporte sea lo más
+                    fácil y cómodo posible para nuestros clientes. Nos enorgullece ser una empresa
+                    confiable, que prioriza la seguridad de tus pertenencias y la eficiencia en cada
+                    entrega. Además, contamos con un equipo altamente capacitado, que sigue rigurosos
+                    procedimientos para asegurar que todo se realice de manera óptima.
+
+                </p>
             </div>
         </div>
     </main>
@@ -80,7 +88,8 @@
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-        <script src="map.js"></script>
+    <script src="map.js"></script>
+    
 
 </body>
 
