--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- api whatsapp -->
     <div class="whatsapp-button">
         <a href="https://api.whatsapp.com/send?phone=2966623913&text=Hola, quisiera más asesoramiento" target="_blank">
-            <img src="/whatsapp.svg" alt="WhatsApp">
+            <img src="./img/logowspeste.png" alt="WhatsApp">
         </a>
     </div>
    
