--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- api whatsapp -->
     <div class="whatsapp-button">
-        <a href="https://api.whatsapp.com/send?phone=2966623913&text=Hola, quisiera más asesoramiento" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=+5492966339063&text=Hola, quisiera más asesoramiento" target="_blank">
             <img src="./img/logowspeste.png" alt="WhatsApp">
         </a>
     </div>
