--- a/nosotros.html
+++ b/nosotros.html
@@ -36,8 +36,8 @@
 
     <!-- api whatsapp -->
     <div class="whatsapp-button">
-        <a href="https://api.whatsapp.com/send?phone=2966623913&text=Hola, quisiera más asesoramiento" target="_blank">
-            <img src="/whatsapp.svg" alt="WhatsApp">
+        <a href="https://api.whatsapp.com/send?phone=+5492966339063&text=Hola, quisiera más asesoramiento" target="_blank">
+            <img src="./img/logowspeste.png" alt="WhatsApp">
         </a>
     </div>
 
