--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="site-header inicio">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <h1>Logistica <span class="colorTitu">LOS HERMANOS</span></h1>
+                <h1 class="grande">Logistica <br> <span class="colorTitu ">LOS HERMANOS</span></h1>
 
                 <div class="mobile-menu">
                     <a href="#navegacion">
