--- a/nosotros.html
+++ b/nosotros.html
@@ -18,7 +18,7 @@
     <header class="site-header">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <h1>Logistica <span class="colorTitu">LOS HERMANOS</span></h1>
+                <h1>Logistica <br> <span class="colorTitu">LOS HERMANOS</span></h1>
 
                 <div class="mobile-menu">
                     <a href="#navegacion">
@@ -49,7 +49,7 @@
                 <img src="img/CAMION3.jpg" alt="Imagen Sobre Nosotros">
             </div>
             <div class="texto-nosotros">
-                <blockquote>Mas de 10 Años de Experiencia</blockquote>
+                <blockquote>Mas de <span class="color10">10 Años</span> de Experiencia</blockquote>
 
                 <p>En LOGISTICA LOS HERMANOS, nos dedicamos a brindar soluciones de logística, fletes
                     y mudanzas con más de 10 años de experiencia en el sector. A lo largo de los años,
@@ -66,7 +66,11 @@
                 </p>
             </div>
         </div>
+        <h3>Visítanos para aclarar todas tus dudas y gestionar tu presupuesto.</h3>
     </main>
+
+    
+
 
     <section id='map' class="contenedor seccion mapa">
         <h1>aca va el mapa</h1>
