--- a/contacto.html
+++ b/contacto.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Formulario de contacto de Logística Los Hermanos">
     <meta name="keywords" content="contacto, bienes raíces, logística">
-
-    <title>Bienes Raices</title>
+    <title>Logistica Los Hermanos</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -70,7 +69,7 @@
                 <a href="index.html">Inicio</a>
                 <a href="nosotros.html">Nosotros</a>
             </nav>
-            <p class="copyright">Todos los Derechos Reservados 2019 &copy; </p>
+            <p class="copyright">Todos los Derechos Reservados&copy; </p>
         </div>
     </footer>
 
