--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>LogisticaLosHermanos</title>
+    <title>Logistica Los Hermanos</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -101,7 +101,7 @@
                 <a href="nosotros.html">Nosotros</a>
                 <a href="contacto.html">Contacto</a>
             </nav>
-            <p class="copyright">Todos los Derechos Reservados 2019 &copy; </p>
+            <p class="copyright">Todos los Derechos Reservados&copy; </p>
         </div>
     </footer>
 </body>
